[project]
name = "wlfinder"
version = "0.2.0"
description = "IP-roulette: find a Russian-hoster VPS whose IPv4 sits in the mobile-operator whitelist, then keep it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "wlfinder contributors" }]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.9",
    "typer>=0.15",
    "rich>=13.9",
    "structlog>=24.4",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml",
]

[project.scripts]
pars = "wlfinder.cli:main"
wlfinder = "wlfinder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wlfinder"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle docs/templates so `pars tokens` / `pars init` work on tool installs.
"docs/tokens.md" = "wlfinder/tokens.md"
".env.example" = "wlfinder/.env.example"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# Typer relies on calls in argument defaults — that is the intended pattern.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
